apps/base/downloaders/nzbget/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`nzbget.${CLUSTER_DOMAIN}`)
      services:
        - name: nzbget
          port: 6789
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
    - kind: Rule
      match: Host(`nzbget.${CLUSTER_DOMAIN}/api`)
      services:
        - name: nzbget
          port: 6789
  tls:
    certResolver: cloudflare
